update our-partners slider, remove from the slider a duplicated item, fix heading font size for 420px and less, center footer contacts on tablet and less, increase our-friends logos size/

--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -75,6 +75,7 @@
     margin-bottom: 0;
   }
   &__contact {
+    text-align: center;
     @media screen and (max-width: 1024px) {
       margin-bottom: 30px;
     }
