--- a/src/scss/components/our-friends.scss
+++ b/src/scss/components/our-friends.scss
@@ -106,7 +106,7 @@
     }
 
     .ourFriend__logo {
-      height: 110px;
+      height: 150px;
       object-fit: contain;
       transition: 0.3 ease;
       filter: grayscale(100%);
