--- a/src/scss/components/our-partners.scss
+++ b/src/scss/components/our-partners.scss
@@ -52,6 +52,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
     @media screen and (max-width: 1024px) {
       padding: 20px;
     }
